[package]
name = "prog1"
version = "0.1.0"
authors = ["Tristan Lostroh <tl8roy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5"
alt-stm32f30x-hal = { features = ["stm32f303"], version = "0.22"}
embedded-hal = {version = "0.2", features = ["unproven"]}


# this lets you use `cargo fix`!
[[bin]]
name = "prog1"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
